--- a/ChatClient/Resources/Grid.xaml
+++ b/ChatClient/Resources/Grid.xaml
@@ -35,14 +35,14 @@
 
     <Style x:Key="toolBarColumn" TargetType="{x:Type ColumnDefinition}">
         <Setter Property="Width" Value="58"/>
-        <Style.Triggers>
+        <!--<Style.Triggers>
             <DataTrigger Binding="{Binding CurrentUser.Role}" Value="User">
                 <Setter Property="Width" Value="0"/>
             </DataTrigger>
             <DataTrigger Binding="{Binding CurrentUser.Role}" Value="Admin">
                 <Setter Property="Width" Value="58"/>
             </DataTrigger>
-        </Style.Triggers>
+        </Style.Triggers>-->
     </Style>
 
     <Style x:Key="toolBarGrid" TargetType="{x:Type Grid}">
