New filter was added

--- a/ChatClient/App.xaml
+++ b/ChatClient/App.xaml
@@ -16,8 +16,9 @@
                 <ResourceDictionary Source="Resources/ContentControl.xaml"/>
                 <ResourceDictionary Source="Resources/Menu.xaml"/>
 
-                <ResourceDictionary Source="../Resources/Images/Send.xaml"/>
-                <ResourceDictionary Source="../Resources/Images/Mute.xaml"/>
+                <ResourceDictionary Source="Resources/Images/Send.xaml"/>
+                <ResourceDictionary Source="Resources/Images/Mute.xaml"/>
+                <ResourceDictionary Source="Resources/Images/Filter.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
